--- a/WebContent/servico.xhtml
+++ b/WebContent/servico.xhtml
@@ -1,15 +1,14 @@
 <?xml version='1.0' encoding='ISO-8859-1' ?>  
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">  
-<f:view xmlns="http://www.w3.org/1999/xhtml"  
-        xmlns:f="http://java.sun.com/jsf/core"  
-        xmlns:h="http://java.sun.com/jsf/html"  
-    xmlns:ui="http://java.sun.com/jsf/facelets"  
-        xmlns:p="http://primefaces.org/ui"  
-        xmlns:pm="http://primefaces.org/mobile"  
-        contentType="text/html"  
-    renderKitId="PRIMEFACES_MOBILE"> 
+<f:view xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:pm="http://primefaces.org/mobile" contentType="text/html"
+	renderKitId="PRIMEFACES_MOBILE">
 
-	<pm:page title="Notes">
+	<pm:page title="#{rodServicosBean.servicoSelecionado.descricao}">
 
 		<!-- Main View -->
 		<pm:view id="main" swatch="e">
