--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -19,50 +19,40 @@
 
 			<pm:content>
 				<h:form id="listNotesForm">
+					<p:messages id="messages" showDetail="true" autoUpdate="true"
+						closable="true" />
+					<p:panel header="CURSO" id="curso">
 
-					<p>Selecione abaixo.</p>
-					<p:dataList value="#{rodServicosBean.lista}" var="servicos"
-						type="inset">
-						<f:facet name="header">
-					        Lista de Serviços
-    					</f:facet>
-						
-						<p:commandButton actionListener="#{rodServicosBean.abreSistema}" action="#{rodServicosBean.vaiParaSistema}"
-							id="abreServicos" value="#{servicos.descricao}">
-							<f:param id="idServico" name="Id" value="#{servicos.id}" />
-						</p:commandButton>
-					</p:dataList>
-
+						<p:panelGrid columns="4">
+							<p:outputLabel value="CODIGO DA PESSOA: " />
+							<p:inputText value="#{pessoasBean.idPessoa}" id="idpessoa"
+								 />
+							<p:commandButton id="chegadaPessoa" value="Chegou"
+								action="#{pessoasBean.chegarPessoa}" icon="check"/>
+							<p:commandButton id="saidaPessoa" value="Saiu"
+								action="#{pessoasBean.sairPessoa}" icon="check"/>
 
 
-				</h:form>
-			</pm:content>
-
-		</pm:view>
-
-		<pm:view id="viewB" swatch="c">
-			<pm:header title="Page 2"></pm:header>
-
-			<pm:content>
-				<h:form id="servico">
-
-
-					<p:panel header="RODIO">
-
-						<p:panelGrid columns="2">
-							<h:outputLabel value="Descriçao: " for="campo_descricao" />
-							<h:inputText value="#{rodUFBean.descricao}" id="campo_descricao"
-								style="width: 200px;" />
-
-							<h:outputLabel value="Sigla: " for="campo_sigla" />
-							<h:inputText value="#{rodUFBean.sigla}" id="campo_sigla"
-								style="width: 200px;" />
 						</p:panelGrid>
 
 					</p:panel>
+					<p:dataList value="#{pessoasBean.lista}" var="pessoas" type="inset">
+						<f:facet name="header">
+					        Lista de Pessoas
+    					</f:facet>
+						<p>ID: #{pessoas.idPessoa}</p>
+						<p>
+							<b>NOME: #{pessoas.nome}</b>
+						</p>
+						<p>CARGO: #{pessoas.cargo}</p>
+						<h:commandButton id="abrePessoa"
+							actionListener="#{pessoasBean.chamaPessoa}" update="curso"
+							value="Selecionar">
+							<f:param id="idPessoa" name="Id" value="#{pessoas.idPessoa}" />
+						</h:commandButton>
+					</p:dataList>
 
 				</h:form>
-
 			</pm:content>
 		</pm:view>
 	</pm:page>
